[package]
name = "montresorbuilder"
version = "0.1.0"
edition = "2021"
about = "A CLI to build a workspace suited to work on montresor's algorithm problems"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "3.1.6", features = ["derive"] }
home = "0.5.4"
