[package]
name = "montresorbuilder"
version = "0.1.0"
author = "Sebastiano Tocci"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Seba-T/MontresorBuilder"
homepage = "https://github.com/Seba-T/MontresorBuilder"
edition = "2021"
about = "A CLI to build a workspace suited to work on montresor's algorithm problems"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "3.1.6", features = ["derive"] }
futures = "0.3.25"
home = "0.5.4"
reqwest = { version = "0.11.13", features = ["cookies", "multipart"] }
tokio = { version = "1.23.0", features = ["full"] }
